--- a/doctor.html
+++ b/doctor.html
@@ -16,7 +16,7 @@
         <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
           <div class="dropdown-menu">
             <ul>
-              <li><a href="#">Login</a></li>
+              <li><a href="login.htnl">Login</a></li>
               <li><a href="#">Diseases</a></li>
               <li><a href="#">About </a></li>
             </ul>
@@ -30,7 +30,7 @@
         <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
           <div class="dropdown-menu">
             <ul>
-              <li><a href="#Doctor">Doctors</a></li>
+              <li><a href="doctor.html">Doctors</a></li>
               <li><a href="#">Lab reports</a></li>
               <li><a href="#">Pharmacy</a></li>
               <li><a href="#">Payments</a></li>
