--- a/login/login.html
+++ b/login/login.html
@@ -34,7 +34,7 @@
                 <input type="checkbox" onclick="myfunction()">
                 <input type="submit" name="" value="LOGIN" onclick="validate()">
                 <br><br>
-                <a href="signup.html" class="link">Or Sign up</a>
+                <a href="dr_signup.html" class="link">Or Sign up</a>
             </div>
             
             <div>
