--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     <a href="privacy policy/privacy.html ">Privacy Policy</a>
                 </li>
                 <li>
-                    <a href="terms and conditions/terms.html ">Terms</a>
+                    <a href="terms and conditions/term.html ">Terms</a>
                 </li>
             </ul>
         </section>
