--- a/contact/contact.html
+++ b/contact/contact.html
@@ -15,77 +15,52 @@
 <body>
     <!-- header section starts  -->
     <section>
-        <div class="menu-bar ">
-            <h1 class="logo ">Sri Lankan's <span>Heart Center</span></h1>
+        <div class="menu-bar">
+
+            <h1 class="logo"> Sri Lankan's <span>Heart Center</span></h1>
             <ul>
-                <li><a href="# ">Home<i class="fas fa-caret-down "></i></a>
-                    <div class="dropdown-menu ">
+                <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
                         <ul>
-                            <li><a href="# ">Login</a></li>
-                            <li><a href="# ">Diseases</a></li>
-                            <li><a href="# ">About Us</a></li>
+                            <li><a href="login/login.html">Login</a></li>
+                            <li><a href="diseases/diseases.html">Diseases</a></li>
                         </ul>
                     </div>
 
 
                 </li>
                 <!--        ---------------------------------->
-                <li><a href="# ">About Us</a></li>
+                <li><a href="About_us/about_us.html">About us</a></li>
                 <!--        ==================---------------->
-                <li><a href="# ">Services<i class="fas fa-caret-down "></i></a>
-                    <div class="dropdown-menu ">
+                <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
+                    <div class="dropdown-menu">
                         <ul>
-                            <li>
-                                <a href="#>Doctors</a>
-                            </li>
-                            <li><a href=" # ">Lab reports</a></li>
-                            <li><a href="# ">Pharmacy</a></li>
-                            <li><a href="# ">Payments</a></li>
-                            <li><a href="# ">Diseases</a></li>
-                            <li><a href="# ">Channeling</a></li>
+                            <li><a href="doctor/doctor.html">Doctors</a></li>
+                            <li><a href="lab report/lab.html">Lab reports</a></li>
+                            <li><a href="pharmacy/pharmacy.html">Pharmacy</a></li>
+                            <li><a href="payments/payment.html">Payments</a></li>
+                            <li><a href="channeling_dr/channel_dr.html">Channeling</a></li>
                         </ul>
                     </div>
-
-
                 </li>
                 <!--        ========================-->
-
-                <li><a href="# ">Contact us<i class="fas fa-caret-down "></i></a>
-
-                    <div class="dropdown-menu ">
-                        <ul>
-                            <li><a href="# ">contact</a></li>
-                            <li><a href="# ">Customer Care</a></li>
-                            <li><a href="# ">Ambulance</a></li>
-                            <li><a href="# ">E-mail</a></li>
-
-                        </ul>
-                    </div>
-
+                <li><a href="contact/contact.html">Contact us</a>
                 </li>
                 <!------------------------>
 
-                <li><a href="# ">Feedback<i class="fas fa-caret-down "></i></a>
+                <li>
+                    <a href="Feedback 01/feedback.html">Feedback</a></li>
 
-                    <div class="dropdown-menu ">
-                        <ul>
-                            <li><a href="# ">Rate us</a></li>
-                            <li><a href="# ">Review</a></li>
-
-                        </ul>
-                    </div>
-                </li>
-
-                <!--        -------------------->
-                <li><a href="# ">Location</a>
+                <!---------------------->
+                <li><a href=" map/map.html ">Location</a>
                 </li>
 
                 <!--        --------------->
                 <li><a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="# ">Doctor</a></li>
-                            <li><a href="# ">Patient</a></li>
+                            <li><a href="dr_signup/dr_signup.html ">Doctor</a></li>
+                            <li><a href="patient_signup/patient_reg.html ">Patient</a></li>
 
                         </ul>
                     </div>
@@ -93,7 +68,6 @@
 
             </ul>
         </div>
-  
     </section>
     <!-- header section ends  -->
 
