--- a/doctor/doctor.html
+++ b/doctor/doctor.html
@@ -104,21 +104,21 @@
           <img src="img/doctor1.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
           <br>
           <br>
-          <a href="doctor1.html">Select</a>
+          <a href="doctor details\doctor1.html">Select</a>
         </div>
         <div class="places">
           <h2>Dr.Sushani Amarasinghe</h2>
           <img src="img/doctor2.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
           <br>
           <br>
-          <a href="doctor2.html">Select</a>
+          <a href="doctor details\doctor2.html">Select</a>
         </div>
         <div class="places">
           <h2>Dr.Asunga Dunuwille</h2>
           <img src="img/doctor3.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
           <br>
           <br>
-          <a href="doctor3.html">Select</a>
+          <a href="doctor details\doctor3.html">Select</a>
         </div>
       </div>
 
@@ -128,14 +128,14 @@
         <img src="img/doctor4.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
-        <a href="doctor4.html">Select</a>
+        <a href="doctor details\doctor4.html">Select</a>
       </div>
       <div class="places">
         <h2>Dr.Hermoine Granger</h2>
         <img src="img/doctor5.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
-        <a href="doctor5.html">Select </a>
+        <a href="doctor details\doctor5.html">Select </a>
       </div>
 
 
@@ -144,7 +144,7 @@
         <img src="img/doctor6.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
         <br>
         <br>
-        <a href="doctor6.html">Select</a>
+        <a href="doctor details\doctor6.html">Select</a>
       </div>
     </div>
     </center>
