--- a/payments/payment.html
+++ b/payments/payment.html
@@ -96,7 +96,7 @@
     <br><br><br><br><br><br><br>
     <div class="container">
 
-        <form action="">
+        <form action="payment.php">
 
             <div class="row">
 
