--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
     <footer>
         <section class="footer ">
             <div class="social ">
-                <a href="# " class="fa fa-facebook "></a>
-                <a href="# " class="fa fa-youtube "></a>
+                <a href="https://www.facebook.com " class="fa fa-facebook "></a>
+                <a href="https://www.youtube.com " class="fa fa-youtube "></a>
 
-                <a href="# " class="fa fa-instagram "></a>
-                <a href="# " class="fa fa-twitter "></a>
+                <a href="https://www.instagram.com " class="fa fa-instagram "></a>
+                <a href="https://www.twitter.com " class="fa fa-twitter "></a>
             </div>
             <ul class="list ">
 
