--- a/payments/payment.html
+++ b/payments/payment.html
@@ -173,7 +173,8 @@
             <input type="submit" value="proceed to pay" class="submit-btn">
 
         </form>
-
+ <!--link to js--->
+        <script type="text/javascript " src="payment.js "></script>
     </div>
 
 </body>
