--- a/pharmacy/pharmacy.html
+++ b/pharmacy/pharmacy.html
@@ -75,13 +75,13 @@
         <div class="contact-box">
           <form action="add.php" method="post">
               <h1 >PHARMCY</h1>
-              <label for="user name">user name</label>
-              <input type="text" class="input-field"  name="user name" >
-              <label for="Medicine name">medicine name</label>
-              <input type="text" class="input-field" name="Medicine name" >
+             
+              <input type="text" class="input-field" placeholder="User Name" name="user_name" >
+              <input type="text" class="input-field" name="medicine_name" placeholder="Medicine Name">
             
               <button type="submit" class="btn" value="SUBMIT">Check Availability</button>
              </form> 
         </div>                  
         </body>
         </html>
+
