--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="dropdown-menu">
                         <ul>
                             <li><a href="doctor/doctor.html">Doctors</a></li>
-                            <li><a href="lab report/lab.html">Lab reports</a></li>
+                            <li><a href="LAB/index.html">Lab reports</a></li>
                             <li><a href="pharmacy/pharmacy.html">Pharmacy</a></li>
                             <li><a href="payments/payment.html">Payments</a></li>
                             <li><a href="channeling_dr/channel_dr.html">Channeling</a></li>
