--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="login/login.html">Login</a></li>
-                            <li><a href="diseases/diseases.html">Diseases</a></li>
+                            <li><a href="FrontEnd/login.html">Login</a></li>
+                            <li><a href="FrontEnd/diseases.html">Diseases</a></li>
                         </ul>
                     </div>
 
@@ -39,13 +39,13 @@
                             <li><a href="doctor/doctor.html">Doctors</a></li>
                             <li><a href="lab report/lab.html">Lab reports</a></li>
                             <li><a href="pharmacy/pharmacy.html">Pharmacy</a></li>
-                            <li><a href="payments/payment.html">Payments</a></li>
+                            <li><a href="FrontEnd/payment.html">Payments</a></li>
                             <li><a href="channeling_dr/channel_dr.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="contact/contact.html">Contact us</a>
+                <li><a href="FrontEnd/contact.html">Contact us</a>
                 </li>
                 <!------------------------>
 
@@ -53,7 +53,7 @@
                     <a href="Feedback 01/feedback.html">Feedback</a></li>
 
                 <!---------------------->
-                <li><a href=" map/map.html ">Location</a>
+                <li><a href="FrontEnd/map.html">Location</a>
                 </li>
 
                 <!--        --------------->
@@ -145,7 +145,7 @@
     </footer>
     <!--link to js--->
 
-    <script type="text/javascript " src="js/index.js "></script>
+    <script type="text/javascript " src="JS/index.js"></script>
 
     </div>
 </body>
