--- a/FrontEnd/map.html
+++ b/FrontEnd/map.html
@@ -109,6 +109,10 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4047271.311617203!2d78.46146961030456!3d7.851730318521041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2593cf65a1e9d%3A0xe13da4b400e2d38c!2sSri%20Lanka!5e0!3m2!1sen!2slk!4v1671351282358!5m2!1sen!2slk"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+    <footer>
+        <p class="copyright "> ©2022 All rights reserved | Made by Team Medical Capstone</p>
+
+    </footer>
 </body>
 
 </html>
