--- a/FrontEnd/doctor.html
+++ b/FrontEnd/doctor.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link rel="stylesheet" href="CSS\doctor.css">
+    <link rel="stylesheet" href="/CSS/doctor.css">
     <title>Our project</title>
 </head>
 
@@ -19,15 +19,15 @@
                 <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="login/login.html">Login</a></li>
-                            <li><a href="diseases/diseases.html">Diseases</a></li>
+                            <li><a href="/FrontEnd/login.html">Login</a></li>
+                            <li><a href="/FrontEnd/diseases.html">Diseases</a></li>
                         </ul>
                     </div>
 
 
                 </li>
                 <!--        ---------------------------------->
-                <li><a href="About_us/about_us.html">About us</a></li>
+                <li><a href="/FrontEnd/About_us.html">About us</a></li>
                 <!--        ==================---------------->
                 <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
@@ -41,15 +41,15 @@
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="contact/contact.html">Contact us</a>
+                <li><a href="/FrontEnd/contact.html">Contact us</a>
                 </li>
                 <!------------------------>
 
                 <li>
-                    <a href="Feedback 01/feedback.html">Feedback</a></li>
+                    <a href="/FrontEnd/feedback.html">Feedback</a></li>
 
                 <!---------------------->
-                <li><a href=" map/map.html ">Location</a>
+                <li><a href="/FrontEnd/map.html ">Location</a>
                 </li>
 
                 <!--        --------------->
