--- a/FrontEnd/doctor.html
+++ b/FrontEnd/doctor.html
@@ -84,21 +84,21 @@
             <div class="places">
 
                 <h2>Dr.Roshan Gunawardana </h2>
-                <img src="Images\doctor1.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+                <img src="/Images/doctor1.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
                 <br>
                 <br>
                 <a href="doctor1.html">Select</a>
             </div>
             <div class="places">
                 <h2>Dr.Sushani Amarasinghe</h2>
-                <img src="Images\doctor2.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+                <img src="/Images/doctor2.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
                 <br>
                 <br>
                 <a href="doctor2.html">Select</a>
             </div>
             <div class="places">
                 <h2>Dr.Asunga Dunuwille</h2>
-                <img src="Images\doctor3.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+                <img src="/Images/doctor3.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
                 <br>
                 <br>
                 <a href="doctor3.html">Select</a>
@@ -108,14 +108,14 @@
         <div class="tours">
             <div class="places">
                 <h2>Dr.Tiran Dias</h2>
-                <img src="Images\doctor4.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+                <img src="/Images/doctor4.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
                 <br>
                 <br>
                 <a href="doctor4.html">Select</a>
             </div>
             <div class="places">
                 <h2>Dr.Hermoine Granger</h2>
-                <img src="Images\doctor5.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+                <img src="/Images/doctor5.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
                 <br>
                 <br>
                 <a href="doctor5.html">Select </a>
@@ -124,7 +124,7 @@
 
             <div class="places">
                 <h2>Dr.Harry</h2>
-                <img src="Images\doctor6.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
+                <img src="/Images/doctor6.jpg" style="width: 250px; height: 250px; border-radius: 12px;">
                 <br>
                 <br>
                 <a href="doctor6.html">Select</a>
