--- a/FrontEnd/doctor1.html
+++ b/FrontEnd/doctor1.html
@@ -97,7 +97,7 @@
       <div class="column">
         <div class="hero">&nbsp;</div>
         <div class="card">
-          <img src="img/doctor1.jpg" alt="Jane" style="width: 70%" />
+          <img src="/Images/doctor1.jpg" alt="Jane" style="width: 70%" />
 
           <h2>Dr.Roshan Gunawardana</h2>
           <p class="title">Cardiologist</p>
@@ -114,5 +114,8 @@
         </div>
       </div>
     </div>
+    <p class="copyright">
+      Copyright ©2022 All rights reserved | Made by Team Medical Capstone
+    </p>
   </body>
 </html>
