--- a/FrontEnd/doctor3.html
+++ b/FrontEnd/doctor3.html
@@ -94,7 +94,7 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <img src="img/doctor3.jpg" alt="Jane" style="width: 70%" />
+          <img src="/Images/doctor3.jpg" alt="Jane" style="width: 70%" />
 
           <h2>Dr.Asunga Dunuwille</h2>
           <p class="title">Cardiologist</p>
