--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="/CSS/index.css">
 </head>
 
 <body>
@@ -23,45 +23,45 @@
                 <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="FrontEnd/login.html">Login</a></li>
-                            <li><a href="FrontEnd/diseases.html">Diseases</a></li>
+                            <li><a href="/FrontEnd/login.html">Login</a></li>
+                            <li><a href="/FrontEnd/diseases.html">Diseases</a></li>
                         </ul>
                     </div>
 
 
                 </li>
                 <!--        ---------------------------------->
-                <li><a href="About_us/about_us.html">About us</a></li>
+                <li><a href="/FrontEnd/about_us.html">About us</a></li>
                 <!--        ==================---------------->
                 <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="doctor/doctor.html">Doctors</a></li>
-                            <li><a href="lab report/lab.html">Lab reports</a></li>
-                            <li><a href="pharmacy/pharmacy.html">Pharmacy</a></li>
-                            <li><a href="FrontEnd/payment.html">Payments</a></li>
-                            <li><a href="channeling_dr/channel_dr.html">Channeling</a></li>
+                            <li><a href="/FrontEnd/docotr.html">Doctors</a></li>
+                            <li><a href="/FrontEnd/LAB.html">Lab reports</a></li>
+                            <li><a href="/FrontEnd/pharmacy.html">Pharmacy</a></li>
+                            <li><a href="/FrontEnd/payment.html">Payments</a></li>
+                            <li><a href="/FrontEnd/channel_Dr.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="FrontEnd/contact.html">Contact us</a>
+                <li><a href="/FrontEnd/contact.html">Contact us</a>
                 </li>
                 <!------------------------>
 
                 <li>
-                    <a href="Feedback 01/feedback.html">Feedback</a></li>
+                    <a href="/FrontEnd/feedback.html">Feedback</a></li>
 
                 <!---------------------->
-                <li><a href="FrontEnd/map.html">Location</a>
+                <li><a href="/FrontEnd/map.html">Location</a>
                 </li>
 
                 <!--        --------------->
                 <li><a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
                     <div class="dropdown-menu ">
                         <ul>
-                            <li><a href="dr_signup/dr_signup.html ">Doctor</a></li>
-                            <li><a href="patient_signup/patient_reg.html ">Patient</a></li>
+                            <li><a href="/FrontEnd/docoty_signup.html">Doctor</a></li>
+                            <li><a href="/FrontEnd/patient_reg.html ">Patient</a></li>
 
                         </ul>
                     </div>
@@ -80,26 +80,26 @@
 
         <div class="filter-gal-par ">
             <div class="gallery_product col-lg-4 col-md-4col-sm-4col-xs-4 filter hdpe ">
-                <img src="images/img5.jpg" class="img-responsive ">
+                <img src="/Images/img5.jpg" class="img-responsive ">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4col-sm-4col-xs-4 filter sprinkle ">
-                <img src="images/img2.jpg" class="img-responsive ">
+                <img src="/Images/img2.jpg" class="img-responsive ">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4col-sm-4col-xs-4 filter hdpe ">
-                <img src="images/img7.jpg " class="img-responsive ">
+                <img src="/Images/img7.jpg" class="img-responsive ">
             </div>
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter spray ">
-                <img src="images/img17.jpg " class="img-responsive ">
+                <img src="/Images/img17.jpg" class="img-responsive ">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter sprinkle ">
-                <img src="images/img1.jpg " class="img-responsive ">
+                <img src="/Images/img14.jpg" class="img-responsive ">
             </div>
 
             <div class="gallery_product col-lg-4 col-md-4 col-sm-4 col-xs-6 filter spray ">
-                <img src="images/img16.jpg " class="img-responsive ">
+                <img src="/Images/img16.jpg " class="img-responsive ">
             </div>
 
         </div>
@@ -126,16 +126,16 @@
                     <a href="index.html ">Home</a>
                 </li>
                 <li>
-                    <a href="contact/contact.html ">Contact Us</a>
+                    <a href="/FrontEnd/contact.html ">Contact Us</a>
                 </li>
                 <li>
-                    <a href="About_us/about_us.html ">About</a>
+                    <a href="/FrontEnd/about_us.html ">About</a>
                 </li>
                 <li>
-                    <a href="privacy policy/privacy.html ">Privacy Policy</a>
+                    <a href="/FrontEnd/privacy.html">Privacy Policy</a>
                 </li>
                 <li>
-                    <a href="terms and conditions/terms.html ">Terms</a>
+                    <a href="FrontEnd/terms.html">Terms</a>
                 </li>
             </ul>
         </section>
@@ -145,7 +145,7 @@
     </footer>
     <!--link to js--->
 
-    <script type="text/javascript " src="JS/index.js"></script>
+    <script type="text/javascript " src="/JS/index.js"></script>
 
     </div>
 </body>
