--- a/FrontEnd/payment.html
+++ b/FrontEnd/payment.html
@@ -72,8 +72,9 @@
       </div>
     </section>
     <br /><br /><br /><br /><br /><br /><br />
+
     <div class="container">
-      <form action="payment.php" method="POST">
+      <form action="/PHP/payment.php" method="POST">
         <div class="row">
           <div class="col">
             <h3 class="title">billing address</h3>
