--- a/FrontEnd/map.html
+++ b/FrontEnd/map.html
@@ -1,118 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Location</title>
     <!-- font awesome cdn link  -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="CSS\map.css">
-</head>
+    <link rel="stylesheet" href="/CSS/map.css" />
+  </head>
 
-<body>
+  <body>
     <!-- header section starts  -->
     <section>
-        <div class="menu-bar">
-            <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
-            <ul>
-                <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
-                    <div class="dropdown-menu">
-                        <ul>
-                            <li><a href="#">Login</a></li>
-                            <li><a href="#">Diseases</a></li>
-                            <li><a href="#">About Us</a></li>
-                        </ul>
-                    </div>
+      <div class="menu-bar">
+        <h1 class="logo">Sri Lankan's <span>Heart Center</span></h1>
+        <ul>
+          <li>
+            <a href="#">Home<i class="fas fa-caret-down"></i></a>
+            <div class="dropdown-menu">
+              <ul>
+                <li><a href="/FrontEnd/login.html">Login</a></li>
+                <li><a href="/FrontEnd/diseases.html">Diseases</a></li>
+              </ul>
+            </div>
+          </li>
+          <!--        ---------------------------------->
+          <li><a href="/FrontEnd/about_us.html">About us</a></li>
+          <!--        ==================---------------->
+          <li>
+            <a href="#">Services<i class="fas fa-caret-down"></i></a>
+            <div class="dropdown-menu">
+              <ul>
+                <li><a href="/FrontEnd/docotr.html">Doctors</a></li>
+                <li><a href="/FrontEnd/LAB.html">Lab reports</a></li>
+                <li><a href="/FrontEnd/pharmacy.html">Pharmacy</a></li>
+                <li><a href="/FrontEnd/payment.html">Payments</a></li>
+                <li><a href="/FrontEnd/channel_Dr.html">Channeling</a></li>
+              </ul>
+            </div>
+          </li>
+          <!--        ========================-->
+          <li><a href="/FrontEnd/contact.html">Contact us</a></li>
+          <!------------------------>
 
+          <li>
+            <a href="/FrontEnd/feedback.html">Feedback</a>
+          </li>
 
-                </li>
-                <!--        ---------------------------------->
-                <li><a href="#">About Us</a></li>
-                <!--        ==================---------------->
-                <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
-                    <div class="dropdown-menu">
-                        <ul>
-                            <li><a href="#Doctor">Doctors</a></li>
-                            <li><a href="#">Lab reports</a></li>
-                            <li><a href="#">Pharmacy</a></li>
-                            <li><a href="#">Payments</a></li>
-                            <li><a href="#">Diseases</a></li>
-                            <li><a href="#">Channeling</a></li>
-                        </ul>
-                    </div>
+          <!---------------------->
+          <li><a href="/FrontEnd/map.html">Location</a></li>
 
+          <!--        --------------->
+          <li>
+            <a href="# ">Sign up<i class="fas fa-caret-down"></i></a>
+            <div class="dropdown-menu">
+              <ul>
+                <li><a href="/FrontEnd/docoty_signup.html">Doctor</a></li>
+                <li><a href="/FrontEnd/patient_reg.html ">Patient</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
 
-                </li>
-                <!--        ========================-->
-
-                <li><a href="#">Contact us<i class="fas fa-caret-down"></i></a>
-
-                    <div class="dropdown-menu">
-                        <ul>
-                            <li><a href="#">contact</a></li>
-                            <li><a href="#">Customer Care</a></li>
-                            <li><a href="#">Ambulance</a></li>
-                            <li><a href="#">E-mail</a></li>
-
-                        </ul>
-                    </div>
-
-                </li>
-                <!------------------------>
-
-                <li><a href="#">Feedback<i class="fas fa-caret-down"></i></a>
-
-                    <div class="dropdown-menu">
-                        <ul>
-
-                            <li><a href="#">Rate us</a></li>
-                            <li><a href="#">Review</a></li>
-
-                        </ul>
-                    </div>
-                </li>
-
-                <!--        -------------------->
-                <li><a href="#">Location</a>
-                </li>
-
-                <!--        --------------->
-                <li><a href="#">Sign up<i class="fas fa-caret-down"></i></a>
-                    <div class="dropdown-menu">
-                        <ul>
-                            <li><a href="#">Doctor</a></li>
-                            <li><a href="#">Patient</a></li>
-
-                        </ul>
-                    </div>
-                </li>
-
-            </ul>
-        </div>
-
-        <div class="hero">
-
-            &nbsp;
-        </div>
+      <div class="hero">&nbsp;</div>
     </section>
-    <br><br><br><br><br><br>
+    <br /><br /><br /><br /><br /><br />
 
     <!-- header section ends  -->
     <div class="container">
-        <br>
-        <h1>Google Map On Website</h1>
-        <br>
+      <br />
+      <h1>Google Map On Website</h1>
+      <br /><br />
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4047271.311617203!2d78.46146961030456!3d7.851730318521041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2593cf65a1e9d%3A0xe13da4b400e2d38c!2sSri%20Lanka!5e0!3m2!1sen!2slk!4v1671351282358!5m2!1sen!2slk"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4047271.311617203!2d78.46146961030456!3d7.851730318521041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2593cf65a1e9d%3A0xe13da4b400e2d38c!2sSri%20Lanka!5e0!3m2!1sen!2slk!4v1671351282358!5m2!1sen!2slk"
+        width="600"
+        height="450"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </div>
     <footer>
-        <p class="copyright "> ©2022 All rights reserved | Made by Team Medical Capstone</p>
-
+      <p class="copyright">
+        ©2022 All rights reserved | Made by Team Medical Capstone
+      </p>
     </footer>
-</body>
-
+  </body>
 </html>
