--- a/frontEnd/About_us.html
+++ b/frontEnd/About_us.html
@@ -3,7 +3,7 @@
     <head>
         <title>About us</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="css\style.css">
+        <link rel="stylesheet" type="text/css" href="/css/style.css">
     </head>
     <body>
         <section>
@@ -88,13 +88,13 @@
                         </p>
                     </div>
                     <div class="social">
-                        <a href=""><i class="fab fa-facebook-f"></i></a>
-                        <a href=""><i class="fab fa-twitter-f"></i></a>
-                        <a href=""><i class="fab fa-instagram-f"></i></a>
+                        <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.fa-twitter-f.com"><i class="fab fa-twitter-f"></i></a>
+                        <a href="https://www.instagram.com"><i class="fab fa-instagram-f"></i></a>
                     </div>
                 </div>
                 <div class="image-section">
-                    <img src="project_logo.jpg" alt="Srilankan's Heart Center" width="600" height="500">
+                    <img src="/images/project_logo.jpg" alt="Srilankan's Heart Center" width="600" height="500">
 
                 </div>
             </div>
