--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -91,7 +91,7 @@
                         <br><br>
                         <input type="submit" name="" value="LOGIN" onclick="validate()">
                         <br><br>
-                        <a href="dr_signup/dr_signup.html" class="btn">Not Registered Sign Up</a>
+                        <a href="/FrontEnd/patient_reg.html" class="btn">Not Registered Sign Up</a>
                 </div>
                 </center>
                 <div>
