--- a/frontEnd/About_us.html
+++ b/frontEnd/About_us.html
@@ -99,6 +99,11 @@
                 </div>
             </div>
         </div>
+
+        <footer>
+            <p class="copyright "> ©2022 All rights reserved | Made by Team Medical Capstone</p>
+    </footer>
+    
     </body>
 
 </html>
