--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="stylesheet" href="/CSS/login.css" />
     <script src="/JS/login.js"></script>
-    <title>Our project</title>
+    <title>login here</title>
 </head>
 
 <h>
@@ -90,7 +90,7 @@
                     <a href="mailto:srihrtcntr@gmail.com">Forgot password? </a>
                     <br><br>
                     <input type="submit" name="" value="LOGIN" onclick="validate()">
-                    <br><br>
+                    <br><br><br><br>
                     <a href="/FrontEnd/patient_reg.html" class="btn">Not Registered Sign Up</a>
             </div>
             </center>
