--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -75,7 +75,7 @@
     <br><br><br><br>
 
     <body>
-        <form action="login.php" method="POST">
+        <form action="/PHP/login.php" method="POST">
             <div class="form">
                 <center>
                     <h1>LOGIN HERE</h1>
@@ -88,7 +88,7 @@
                 <br><br>
                 <center>
                     <a href="mailto:srihrtcntr@gmail.com">Forgot password? </a>
-                    <br><br>
+                    <br><br><br>
                     <input type="submit" name="" value="LOGIN" onclick="validate()">
                     <br><br><br><br>
                     <a href="/FrontEnd/patient_reg.html" class="btn">Not Registered Sign Up</a>
