--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -8,63 +8,50 @@
     <link rel="stylesheet" href="/CSS/login.css" />
     <script src="/JS/login.js"></script>
     <title>login here</title>
-    <script src="login.js"></script>
-    <title>Our project</title>
 
 </head>
 
-<h>
+<body>
+    <!-- section section starts  -->
     <section>
-
         <div class="menu-bar">
-
-        <section>
-            <div class="menu-bar">
-
-                <h1 class="logo"> Sri Lankan's <span>Heart Center</span></h1>
-                <ul>
-                    <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
-                        <div class="dropdown-menu">
-                            <ul>
-                                <li><a href="login/login.html">Login</a></li>
-                                <li><a href="diseases/diseases.html">Diseases</a></li>
-                            </ul>
-                        </div>
 
             <h1 class="logo"> Sri Lankan's <span>Heart Center</span></h1>
             <ul>
                 <li><a href="#">Home<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="/FrontEnd/login.html">Login</a></li>
+                            <li><a href="login.html">Login</a></li>
                             <li><a href="/FrontEnd/diseases.html">Diseases</a></li>
                         </ul>
                     </div>
+
+
                 </li>
                 <!--        ---------------------------------->
-                <li><a href="/FrontEnd/About_us.html">About us</a></li>
+                <li><a href="About_us/about_us.html">About us</a></li>
                 <!--        ==================---------------->
                 <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="/FrontEnd/doctor.html">Doctors</a></li>
+                            <li><a href="doctor/doctor.html">Doctors</a></li>
                             <li><a href="lab report/lab.html">Lab reports</a></li>
                             <li><a href="pharmacy/pharmacy.html">Pharmacy</a></li>
-                            <li><a href="/FrontEnd/payment.html">Payments</a></li>
+                            <li><a href="payments/payment.html">Payments</a></li>
                             <li><a href="channeling_dr/channel_dr.html">Channeling</a></li>
                         </ul>
                     </div>
                 </li>
                 <!--        ========================-->
-                <li><a href="/FrontEnd/contact.html">Contact us</a>
+                <li><a href="contact/contact.html">Contact us</a>
                 </li>
                 <!------------------------>
 
                 <li>
-                    <a href="/FrontEnd/feedback.html">Feedback</a></li>
+                    <a href="Feedback 01/feedback.html">Feedback</a></li>
 
                 <!---------------------->
-                <li><a href="/FrontEnd/map.html ">Location</a>
+                <li><a href=" map/map.html ">Location</a>
                 </li>
 
                 <!--        --------------->
@@ -80,7 +67,6 @@
 
             </ul>
         </div>
-
         <div class="hero">
 
             &nbsp;
@@ -89,106 +75,30 @@
     </section>
     <br><br><br><br>
 
-    <body>
-        <form action="/PHP/login.php" method="POST">
-            <div class="form">
-                <center>
-                    <h1>LOGIN HERE</h1>
-                    <br><br>
-                </center>
-                <p>Username :</p>
-                <input type="text" name="" placeholder="Name Here">
-                <p>Password :</p>
-                <input type="password" name="" placeholder="Password Here" id="pass">
+    <form action="/PHP/login.php" method="POST">
+        <div class="form">
+            <center>
+                <h1>LOGIN HERE</h1>
                 <br><br>
-                <center>
-                    <a href="mailto:srihrtcntr@gmail.com">Forgot password? </a>
-                    <br><br><br>
-                    <input type="submit" name="" value="LOGIN" onclick="validate()">
-                    <br><br><br><br>
-                    <a href="/FrontEnd/patient_reg.html" class="btn">Not Registered Sign Up</a>
-            </div>
             </center>
-            <div>
-                <p id="length"></p>
-            </div>
-        </form>
+            <p>Username :</p>
+            <input type="text" name="" placeholder="Name Here">
+            <p>Password :</p>
+            <input type="password" name="" placeholder="Password Here" id="pass">
+            <br><br>
+            <center>
+                <a href="mailto:srihrtcntr@gmail.com">Forgot password? </a>
+                <br><br><br>
+                <input type="submit" name="" value="LOGIN" onclick="validate()">
+                <br><br><br><br>
+                <a href="/FrontEnd/patient_reg.html" class="btn">Not Registered Sign Up</a>
+        </div>
+        </center>
+        <div>
+            <p id="length"></p>
+        </div>
+    </form>
 
-    </body>
-=======
-                    </li>
-                    <!--        ---------------------------------->
-                    <li><a href="About_us/about_us.html">About us</a></li>
-                    <!--        ==================---------------->
-                    <li><a href="#">Services<i class="fas fa-caret-down"></i></a>
-                        <div class="dropdown-menu">
-                            <ul>
-                                <li><a href="doctor/doctor.html">Doctors</a></li>
-                                <li><a href="lab report/lab.html">Lab reports</a></li>
-                                <li><a href="pharmacy/pharmacy.html">Pharmacy</a></li>
-                                <li><a href="payments/payment.html">Payments</a></li>
-                                <li><a href="channeling_dr/channel_dr.html">Channeling</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                    <!--        ========================-->
-                    <li><a href="contact/contact.html">Contact us</a>
-                    </li>
-                    <!------------------------>
-
-                    <li>
-                        <a href="Feedback 01/feedback.html">Feedback</a></li>
-
-                    <!---------------------->
-                    <li><a href=" map/map.html ">Location</a>
-                    </li>
-
-                    <!--        --------------->
-                    <li><a href="# ">Sign up<i class="fas fa-caret-down "></i></a>
-                        <div class="dropdown-menu ">
-                            <ul>
-                                <li><a href="dr_signup/dr_signup.html ">Doctor</a></li>
-                                <li><a href="patient_signup/patient_reg.html ">Patient</a></li>
-
-                            </ul>
-                        </div>
-                    </li>
-
-                </ul>
-
-                <div class="hero">
-
-                    &nbsp;
-                </div>
-            </div>
-        </section>
-        <br><br><br><br>
-
-        <body>
-            <form action="login.php" method="POST">
-                <div class="form">
-                    <center>
-                        <h1>LOGIN HERE</h1>
-                        <br><br>
-                    </center>
-                    <p>Username :</p>
-                    <input type="text" name="" placeholder="Name Here">
-                    <p>Password :</p>
-                    <input type="password" name="" placeholder="Password Here" id="pass">
-                    <br><br>
-                    <center>
-                        <a href="mailto:srihrtcntr@gmail.com">Forgot password? </a>
-                        <br><br>
-                        <input type="submit" name="" value="LOGIN" onclick="validate()">
-                        <br><br>
-                        <a href="dr_signup/dr_signup.html" class="btn">Not Registered Sign Up</a>
-                </div>
-                </center>
-                <div>
-                    <p id="length"></p>
-                </div>
-            </form>
-
-        </body>
+</body>
 
 </html>
